--- a/styles/base.css
+++ b/styles/base.css
@@ -26,7 +26,7 @@ nav {
     background-color: #424141;
     border: 1px solid #01295F;
     margin: 0 auto;
-    max-width: 1 800px;
+    max-width: 800px;
 }
 
 nav ul {
