--- a/styles/temples.css
+++ b/styles/temples.css
@@ -56,8 +56,6 @@ nav {
     flex-direction: column;
     justify-content: space-evenly;
     list-style: none;
-    background-color: #333;
-    color: #fff;
 }
 
 .navigation a {
@@ -93,6 +91,7 @@ nav ul li {
 main {
     text-align: center;
     max-width: 2560px;
+    background-color: #dadad9;
 }
 
 section {
@@ -122,7 +121,7 @@ figcaption {
 
 footer {
     background-color: #01295F;
-    color: #E64D0B;
+    color: #dadad9;
     text-align: center;
     margin-top: 10px;
     max-width: 2560px;
