--- a/styles/place-large.css
+++ b/styles/place-large.css
@@ -21,10 +21,6 @@
         position: absolute;
         bottom: 20px;
         right: 20px;
-        display: grid;
-        grid-template-columns: auto 50px;
-        grid-gap: 10px;
-        align-items: center;
     }
 
     .weather h2 {
@@ -34,6 +30,10 @@
         margin: 0;
         margin-right: 10px;
         padding: 0;
+    }
+
+    .weather h2::after {
+        
     }
 
     .weather img {
