--- a/styles/place.css
+++ b/styles/place.css
@@ -52,6 +52,8 @@ li {
     background-color: var(--secondary-color);
     display: flex;
     flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 .weather img {
