--- a/styles/form.css
+++ b/styles/form.css
@@ -1,5 +1,5 @@
 :root {
-    --header-color: #fb0a26;
+    --header-color: #fbff00;
     --paragaph-color: #46ebeb;
     --background-color: #000;
     --header-font: "Lavishly Yours", cursive;
@@ -24,14 +24,23 @@ fieldset {
 }
 
 header,
-h2 {
+h2,
+.review,
+.name,
+.installation {
     font-family: var(--header-font);
     color: var(--header-color);
     font-size: 2rem;
 }
 
-label {
-    padding-bottom: 50px;
+label,
+#review,
+#name {
+    margin-bottom: 50px;
+}
+
+.review {
+    margin-top: 20px;
 }
 
 .features {
@@ -50,7 +59,7 @@ label {
 input[type="submit"] {
     border: none;
     background-color: var(--header-color);
-    color: var(--paragaph-color);
+    color: var(--background-color);
     font-family: var(--paragraph-font);
     width: 96%;
     max-width: 400px;
@@ -59,7 +68,7 @@ input[type="submit"] {
 }
 
 input[type="submit"]:hover {
-    background-color: var(--paragaph-color);
+    background-color: var(--background-color);
     color: var(--header-color);
 }
 
@@ -94,6 +103,7 @@ footer {
     width: 100%;
     max-width: 450px;
 }
+
 /* star rating style */
 
 input[type="radio"] {
@@ -108,7 +118,7 @@ input[type="radio"] {
     justify-content: left;
 }
 
-.stars > label {
+.stars>label {
     color: gold;
     width: 30px;
     height: 30px;
@@ -119,15 +129,14 @@ input[type="radio"] {
     caret-color: rgba(0, 0, 0, 0)
 }
 
-.stars > label:hover {
+.stars>label:hover {
     color: blue;
 }
 
-.stars > label::before {
+.stars>label::before {
     content: "⃝";
 }
 
-.stars input:checked ~ label::before {
+.stars input:checked~label::before {
     content: "\2605";
 }
-
